# TLE_auto_dowloader

./: .env.example  .gitignore  LICENSE  README.md  data_taker.py  main.py  pyproject.toml
